// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`workflow template snapshots > gaia-ci.yml matches snapshot 1`] = `
"name: GAIA CI

# Generated by \`gaia automation render-workflows\`. Do not edit by hand;
# changes here are overwritten on the next \`/setup-gaia --reconfigure\`.
# Source of truth: .gaia/automation.json + the workflow templates
# bundled with the gaia CLI.
#
# The single scheduled entry point for every CI-mode tool. GitHub rounds a job
# up to a whole minute and bills that minimum, so a tick that only decides to
# skip costs as much as one that works; a tool holding its own cron paid that
# floor whether or not it had anything to do, once per tool per day. This
# workflow pays it once per fired cron, asks each due tool whether it has work,
# and calls only the ones that answer \`run\`.
#
# Each tool keeps its own cron literal here rather than moving to a single
# shared one, so \`weekly\` and \`monthly\` tools still fire when they always did.
# A cron shared by two tools fires one run that decides for both.
#
# No \`concurrency\` group at this level, on purpose: each tool workflow declares
# its own (\`gaia-ci-<tool>\`), which is what serializes a tool against itself. A
# second group here would add queueing without adding protection, and a caller
# and callee contending for one group can deadlock.
#
# Each tool workflow keeps its own open-PR check: it guards a manual
# \`workflow_dispatch\`, which never passes through here. The query below is a
# pre-filter over the same data, not a second source of truth, and it is worth
# running twice because skipping a tool here costs nothing while calling one
# that will skip anyway costs a full-history checkout and a billed minute. A
# disagreement resolves the safe way by construction: the callee re-checks and
# skips, so the worst this pre-filter can do is fail to save a minute.
#
# Known residual, deliberately not solved here: GitHub starts one run per
# \`schedule:\` entry that matches a given minute, so a day on which two of the
# crons below coincide pays two decide ticks rather than one. Collapsing to a
# single daily entry means computing due-ness from the date instead of from
# the fired cron, which changes when weekly and monthly tools fire.

on:
  workflow_dispatch: {}
  schedule:
    - cron: '0 4 * * *'
    - cron: '0 4 * * 0'
    - cron: '0 4 1-7 * 0'

# The union of what the called workflows declare. A called workflow's own
# \`permissions\` block still applies and can only narrow this, never widen it.
permissions:
  contents: write
  pull-requests: write
  issues: write
  id-token: write

jobs:
  decide:
    runs-on: ubuntu-latest
    timeout-minutes: 10
    permissions:
      contents: read
      # The \`gh pr list\` pre-filter below reads pull requests. Omitting this
      # leaves \`pull-requests\` at \`none\`, which 403s on a private repo, and
      # the step's \`set -euo pipefail\` turns that into a failed \`decide\` that
      # skips every call job.
      pull-requests: read
    outputs:
      due: \${{ steps.decide.outputs.due }}
    steps:
      # Not \`partials/checkout\`, which fetches full history for the tools that
      # need it. This job reads the committed config and the committed GAIA
      # binary, both under \`.gaia/\`, and the whole point of collapsing the
      # crons is that this tick stays well under the minute GitHub bills it.
      # \`.git\` is still materialized, which is what repo-root resolution needs.
      - name: Checkout
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1 # v7.0.1
        with:
          sparse-checkout: .gaia
      - name: Decide which tools have work
        id: decide
        env:
          GH_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          # The cron literal that fired this run, empty on a manual dispatch.
          # Bound through \`env\` rather than interpolated into the script body,
          # so the value reaches the shell as data and never as syntax.
          FIRED_CRON: \${{ github.event.schedule }}
        run: |
          set -euo pipefail
          due_file="\${RUNNER_TEMP}/gaia-ci-due.txt"
          : > "$due_file"
          # One query for every tool. Each gaia-ci PR branches under its own
          # \`gaia-ci/<tool>/\` prefix, so the prefix is what attributes a PR to
          # a tool.
          open_pr_branches=$(gh pr list --state open --label gaia-ci \\
            --search 'author:app/github-actions' \\
            --json headRefName --jq '.[].headRefName')
          # A tool is due when the cron that fired is its own, and on a manual
          # dispatch, where no cron fired and every enabled tool is considered.
          decide_tool() {
            tool="$1"
            tool_cron="$2"
            if [ -n "$FIRED_CRON" ] && [ "$FIRED_CRON" != "$tool_cron" ]; then
              echo "$tool: not scheduled for '$FIRED_CRON'"
              return 0
            fi
            # A here-string rather than a pipe: this block arms \`pipefail\`, and
            # a quiet grep downstream of a pipe closes it at the first match, so
            # the producer takes SIGPIPE and the pipeline answers FALSE because
            # a match WAS found -- which would report no open PR and start a
            # second one.
            if grep -q "^gaia-ci/$tool/" <<<"$open_pr_branches"; then
              echo "$tool: open gaia-ci PR; skipping"
              return 0
            fi
            decision_json=$(.gaia/cli/gaia automation cron-decide "$tool" --json)
            decision=$(printf '%s' "$decision_json" | jq -r '.decision')
            if [ "$decision" != 'run' ]; then
              skip_log_line=$(printf '%s' "$decision_json" | jq -r '.skip_log_line // "skipping"')
              echo "$tool: $skip_log_line"
              return 0
            fi
            echo "$tool" >> "$due_file"
            echo "$tool: has work"
          }
          decide_tool wiki '0 4 * * *'
          decide_tool update-deps '0 4 * * 0'
          decide_tool pnpm-audit '0 4 * * *'
          decide_tool stale-branches '0 4 1-7 * 0'
          # A JSON array, so the \`contains\` guards below match a whole tool id
          # rather than a substring of one.
          due=$(jq -R -s -c 'split("\\n") | map(select(length > 0))' < "$due_file")
          echo "due: $due"
          echo "due=$due" >> "$GITHUB_OUTPUT"

  wiki:
    needs: decide
    if: contains(fromJSON(needs.decide.outputs.due), 'wiki')
    uses: ./.github/workflows/gaia-ci-wiki.yml
    secrets: inherit

  update-deps:
    needs: decide
    if: contains(fromJSON(needs.decide.outputs.due), 'update-deps')
    uses: ./.github/workflows/gaia-ci-update-deps.yml
    secrets: inherit

  pnpm-audit:
    needs: decide
    if: contains(fromJSON(needs.decide.outputs.due), 'pnpm-audit')
    uses: ./.github/workflows/gaia-ci-pnpm-audit.yml
    secrets: inherit

  stale-branches:
    needs: decide
    if: contains(fromJSON(needs.decide.outputs.due), 'stale-branches')
    uses: ./.github/workflows/gaia-ci-stale-branches.yml
    secrets: inherit

"
`;

exports[`workflow template snapshots > gaia-ci-pnpm-audit.yml matches snapshot 1`] = `
"name: GAIA CI - pnpm audit

# Generated by \`gaia automation render-workflows\`. Do not edit by hand;
# changes here are overwritten on the next \`/setup-gaia --reconfigure\`.
# Source of truth: .gaia/automation.json + the workflow templates
# bundled with the gaia CLI.

# No \`schedule:\` here. \`gaia-ci.yml\` is the one scheduled entry point: it
# asks each due tool whether it has work and calls only the ones that answer
# \`run\`. GitHub bills every job a whole-minute minimum, so a tool waking its
# own cron paid that floor to reach a decision the scheduler has already made.
# \`workflow_call\` is how the scheduler reaches this workflow; the manual
# \`workflow_dispatch\` entry point is unchanged and runs it in full.
on:
  workflow_call: {}
  workflow_dispatch: {}

permissions:
  contents: write
  pull-requests: write
  issues: write
  # Add \`id-token: write\` only if your registry authenticates \`pnpm audit\`
  # via OIDC / workload-identity federation rather than a static _authToken.

concurrency:
  group: gaia-ci-pnpm-audit
  cancel-in-progress: false

env:
  GH_TOKEN: \${{ secrets.GITHUB_TOKEN }}
  CLAUDE_CODE_OAUTH_TOKEN: \${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
  ANTHROPIC_API_KEY: \${{ secrets.ANTHROPIC_API_KEY }}

jobs:
  run:
    runs-on: ubuntu-latest
    timeout-minutes: 60
    steps:
      - name: Checkout
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1 # v7.0.1
        with:
          fetch-depth: 0

      - name: Pre-run skip - open gaia-ci PR or cron-decide
        id: pre_run
        run: |
          set -euo pipefail
          # Skip only if an open gaia-ci PR for THIS tool already exists.
          # Scope by branch prefix \`gaia-ci/pnpm-audit/\` so a wiki PR does
          # not block the audit, etc. Each workflow branches under its own
          # tool_id prefix (see partials/auto-merge and the audit/update-deps
          # templates).
          existing_pr=$(gh pr list --state open --label gaia-ci \\
            --search 'author:app/github-actions' \\
            --json number,headRefName \\
            --jq '[.[] | select(.headRefName | startswith("gaia-ci/pnpm-audit/"))] | .[0].number // empty')
          if [ -n "$existing_pr" ]; then
            echo "open gaia-ci PR #$existing_pr for pnpm-audit; skipping"
            echo "decision=skip" >> "$GITHUB_OUTPUT"
            echo "reason=open_pr" >> "$GITHUB_OUTPUT"
            exit 0
          fi
          # Otherwise consult the smart-cron decision primitive.
          decision_json=$(.gaia/cli/gaia automation cron-decide pnpm-audit --json)
          decision=$(printf '%s' "$decision_json" | jq -r '.decision')
          reason=$(printf '%s' "$decision_json" | jq -r '.reason')
          skip_log_line=$(printf '%s' "$decision_json" | jq -r '.skip_log_line // empty')
          if [ "$decision" = "skip" ]; then
            echo "$skip_log_line"
          fi
          echo "decision=$decision" >> "$GITHUB_OUTPUT"
          echo "reason=$reason" >> "$GITHUB_OUTPUT"

      # Setup sits after the skip decision so a tick that skips does not pay
      # for an install it never uses. All three steps carry the gate, not the
      # install alone: setup-node's \`cache: 'pnpm'\` post step saves the pnpm
      # store unconditionally, and saving a store no install created fails the
      # job. The gate reads \`!= 'skip'\` so this same setup also runs in a job
      # gated at the job level, which has no \`pre_run\` step of its own.
      - name: Setup pnpm
        if: steps.pre_run.outputs.decision != 'skip'
        uses: pnpm/action-setup@0977fd99725f1db4007ccb2928dbb4e90d06cc86 # v6.0.10
      - name: Setup Node
        if: steps.pre_run.outputs.decision != 'skip'
        uses: actions/setup-node@820762786026740c76f36085b0efc47a31fe5020 # v7.0.0
        with:
          node-version-file: '.node-version'
          cache: 'pnpm'
      - name: Install dependencies
        if: steps.pre_run.outputs.decision != 'skip'
        run: pnpm install --frozen-lockfile

      - name: Quality Gate
        if: steps.pre_run.outputs.decision == 'run'
        run: |
          set -euo pipefail
          pnpm typecheck
          pnpm lint


      - name: Run pnpm audit and open security PR for high/critical
        if: steps.pre_run.outputs.decision == 'run'
        env:
          REPO: \${{ github.repository }}
          DEFAULT_BRANCH: \${{ github.event.repository.default_branch }}
        run: |
          set -euo pipefail
          default=$(gh api "repos/$REPO" --jq '.default_branch' 2>/dev/null || echo "main")
          audit_json=$(pnpm audit --json || true)
          high_count=$(printf '%s' "$audit_json" | jq '[.advisories | to_entries[] | .value | select(.severity == "high" or .severity == "critical")] | length')
          if [ "$high_count" = "0" ]; then
            echo "no high/critical findings"
            exit 0
          fi
          # For each high/critical advisory, open one security issue (deduped
          # by exact title) and one targeted single-package bump PR.
          printf '%s' "$audit_json" \\
            | jq -c '.advisories | to_entries[] | .value | select(.severity == "high" or .severity == "critical")' \\
            | while read -r advisory; do
                pkg=$(printf '%s' "$advisory" | jq -r '.module_name')
                severity=$(printf '%s' "$advisory" | jq -r '.severity')
                cve=$(printf '%s' "$advisory" | jq -r '.cves[0] // .id')
                url=$(printf '%s' "$advisory" | jq -r '.url')
                # Issue (dedupe by exact title against open gaia-ci+security
                # issues; daily cron must not stack duplicates while a
                # vulnerability remains unpatched).
                TITLE="[GAIA CI] $severity: $pkg ($cve)"
                existing_issue=$(TITLE="$TITLE" gh issue list \\
                  --state open --label gaia-ci --label security \\
                  --json number,title \\
                  --jq '[.[] | select(.title == env.TITLE)] | .[0].number // empty')
                if [ -z "$existing_issue" ]; then
                  gh issue create \\
                    --title "$TITLE" \\
                    --label gaia-ci,security \\
                    --body "Severity: $severity\\nPackage: $pkg\\nAdvisory: $url"
                else
                  echo "issue #$existing_issue already open for $pkg ($cve); skipping create"
                fi
                # Targeted single-package security PR. Branch prefix is
                # \`gaia-ci/pnpm-audit/security/\` so pre-run-skip's
                # branch-prefix scope blocks the next daily run only while
                # this workflow's own PR is open.
                branch="gaia-ci/pnpm-audit/security/$pkg-$(date -u +%Y%m%d-%H%M%S)"
                git checkout -b "$branch" "$default"
                pnpm update "$pkg"
                git config user.name 'github-actions[bot]'
                git config user.email 'github-actions[bot]@users.noreply.github.com'
                git add -A
                git commit -m "chore(security): bump $pkg ($cve)"
                git push origin "$branch"
                gh pr create \\
                  --title "chore(security): bump $pkg ($cve)" \\
                  --body "Targeted security patch. Auto-merges on green CI." \\
                  --label gaia-ci,security \\
                  --head "$branch" \\
                  --base "$DEFAULT_BRANCH"
                git checkout -
              done

      # Auto-merge partial. Gated on \`enable_auto_merge\` so the
      # stale-branches workflow (which doesn't open a PR) emits no
      # merge invocation in its rendered YAML.

      - name: Open and auto-merge gaia-ci PR
        if: steps.pre_run.outputs.decision == 'run' && success()
        env:
          DEFAULT_BRANCH: \${{ github.event.repository.default_branch }}
        run: |
          set -euo pipefail
          branch="gaia-ci/pnpm-audit/$(date -u +%Y%m%d-%H%M%S)"
          git checkout -b "$branch"
          if [ -z "$(git status --porcelain)" ]; then
            echo "no changes; nothing to PR"
            exit 0
          fi
          git config user.name 'github-actions[bot]'
          git config user.email 'github-actions[bot]@users.noreply.github.com'
          git add -A
          git commit -m "chore(pnpm-audit): GAIA CI run"
          # Re-authenticate git before pushing. A claude-code-action step
          # earlier in this job runs in OIDC mode and rewrites the
          # checkout-persisted credential (http.<host>.extraheader) around a
          # short-lived, OIDC-derived GitHub App token that no longer
          # authorizes this push. Reset the extraheader to the workflow
          # GH_TOKEN (permissions: contents: write) so the push authenticates
          # deterministically regardless of what the action left behind.
          git config --local --unset-all http.https://github.com/.extraheader || true
          git config --local http.https://github.com/.extraheader \\
            "AUTHORIZATION: basic $(printf 'x-access-token:%s' "$GH_TOKEN" | base64 | tr -d '\\n')"
          git push origin "$branch"
          pr_url=$(gh pr create \\
            --title "chore(pnpm-audit): GAIA CI run" \\
            --body "Generated by GAIA CI (GAIA CI - pnpm audit)." \\
            --label gaia-ci \\
            --head "$branch" \\
            --base "$DEFAULT_BRANCH")
          pr_number=$(printf '%s' "$pr_url" | grep -oE '[0-9]+$')

          gh pr merge "$pr_number" --auto --squash


"
`;

exports[`workflow template snapshots > gaia-ci-stale-branches.yml matches snapshot 1`] = `
"name: GAIA CI - Stale Branches

# Generated by \`gaia automation render-workflows\`. Do not edit by hand;
# changes here are overwritten on the next \`/setup-gaia --reconfigure\`.
# Source of truth: .gaia/automation.json + the workflow templates
# bundled with the gaia CLI.

# No \`schedule:\` here. \`gaia-ci.yml\` is the one scheduled entry point: it
# asks each due tool whether it has work and calls only the ones that answer
# \`run\`. GitHub bills every job a whole-minute minimum, so a tool waking its
# own cron paid that floor to reach a decision the scheduler has already made.
# \`workflow_call\` is how the scheduler reaches this workflow; the manual
# \`workflow_dispatch\` entry point is unchanged and runs it in full.
on:
  workflow_call: {}
  workflow_dispatch: {}

permissions:
  contents: write
  pull-requests: write
  issues: write

concurrency:
  group: gaia-ci-stale-branches
  cancel-in-progress: false

env:
  GH_TOKEN: \${{ secrets.GITHUB_TOKEN }}
  CLAUDE_CODE_OAUTH_TOKEN: \${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
  ANTHROPIC_API_KEY: \${{ secrets.ANTHROPIC_API_KEY }}

jobs:
  run:
    runs-on: ubuntu-latest
    timeout-minutes: 60
    steps:
      - name: Checkout
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1 # v7.0.1
        with:
          fetch-depth: 0

      - name: Pre-run skip - open gaia-ci PR or cron-decide
        id: pre_run
        run: |
          set -euo pipefail
          # Skip only if an open gaia-ci PR for THIS tool already exists.
          # Scope by branch prefix \`gaia-ci/stale-branches/\` so a wiki PR does
          # not block the audit, etc. Each workflow branches under its own
          # tool_id prefix (see partials/auto-merge and the audit/update-deps
          # templates).
          existing_pr=$(gh pr list --state open --label gaia-ci \\
            --search 'author:app/github-actions' \\
            --json number,headRefName \\
            --jq '[.[] | select(.headRefName | startswith("gaia-ci/stale-branches/"))] | .[0].number // empty')
          if [ -n "$existing_pr" ]; then
            echo "open gaia-ci PR #$existing_pr for stale-branches; skipping"
            echo "decision=skip" >> "$GITHUB_OUTPUT"
            echo "reason=open_pr" >> "$GITHUB_OUTPUT"
            exit 0
          fi
          # Otherwise consult the smart-cron decision primitive.
          decision_json=$(.gaia/cli/gaia automation cron-decide stale-branches --json)
          decision=$(printf '%s' "$decision_json" | jq -r '.decision')
          reason=$(printf '%s' "$decision_json" | jq -r '.reason')
          skip_log_line=$(printf '%s' "$decision_json" | jq -r '.skip_log_line // empty')
          if [ "$decision" = "skip" ]; then
            echo "$skip_log_line"
          fi
          echo "decision=$decision" >> "$GITHUB_OUTPUT"
          echo "reason=$reason" >> "$GITHUB_OUTPUT"

      # Setup sits after the skip decision so a tick that skips does not pay
      # for an install it never uses. All three steps carry the gate, not the
      # install alone: setup-node's \`cache: 'pnpm'\` post step saves the pnpm
      # store unconditionally, and saving a store no install created fails the
      # job. The gate reads \`!= 'skip'\` so this same setup also runs in a job
      # gated at the job level, which has no \`pre_run\` step of its own.
      - name: Setup pnpm
        if: steps.pre_run.outputs.decision != 'skip'
        uses: pnpm/action-setup@0977fd99725f1db4007ccb2928dbb4e90d06cc86 # v6.0.10
      - name: Setup Node
        if: steps.pre_run.outputs.decision != 'skip'
        uses: actions/setup-node@820762786026740c76f36085b0efc47a31fe5020 # v7.0.0
        with:
          node-version-file: '.node-version'
          cache: 'pnpm'
      - name: Install dependencies
        if: steps.pre_run.outputs.decision != 'skip'
        run: pnpm install --frozen-lockfile

      - name: Quality Gate
        if: steps.pre_run.outputs.decision == 'run'
        run: |
          set -euo pipefail
          pnpm typecheck
          pnpm lint


      - name: Delete branches merged > 30 days ago
        if: steps.pre_run.outputs.decision == 'run'
        env:
          REPO: \${{ github.repository }}
        run: |
          set -euo pipefail
          cutoff=$(date -u -d '30 days ago' +%s 2>/dev/null || date -u -v-30d +%s)
          # Walk all branches except the default branch and delete any whose merged-PR head is older than the cutoff.
          default=$(gh api "repos/$REPO" --jq '.default_branch' 2>/dev/null || echo "main")
          gh api "repos/$REPO/branches" --paginate --jq '.[].name' \\
            | grep -vF "$default" \\
            | while read -r br; do
                # Skip if there's an open PR with this branch as head.
                open=$(gh pr list --state open --head "$br" --json number --jq '.[0].number // empty')
                if [ -n "$open" ]; then continue; fi
                # Find the most recent merged PR with this branch as head.
                merged_at=$(gh pr list --state closed --head "$br" --json mergedAt --jq '.[0].mergedAt // empty')
                if [ -z "$merged_at" ]; then continue; fi
                merged_ts=$(date -u -d "$merged_at" +%s 2>/dev/null || date -u -j -f '%Y-%m-%dT%H:%M:%SZ' "$merged_at" +%s)
                if [ "$merged_ts" -lt "$cutoff" ]; then
                  echo "deleting stale branch: $br (merged $merged_at)"
                  gh api -X DELETE "repos/$REPO/git/refs/heads/$br"
                fi
              done

      # Auto-merge partial. Gated on \`enable_auto_merge\` so the
      # stale-branches workflow (which doesn't open a PR) emits no
      # merge invocation in its rendered YAML.


"
`;

exports[`workflow template snapshots > gaia-ci-update-deps.yml matches snapshot 1`] = `
"name: GAIA CI - Update Deps

# Generated by \`gaia automation render-workflows\`. Do not edit by hand;
# changes here are overwritten on the next \`/setup-gaia --reconfigure\`.
# Source of truth: .gaia/automation.json + the workflow templates
# bundled with the gaia CLI.

# No \`schedule:\` here. \`gaia-ci.yml\` is the one scheduled entry point: it
# asks each due tool whether it has work and calls only the ones that answer
# \`run\`. GitHub bills every job a whole-minute minimum, so a tool waking its
# own cron paid that floor to reach a decision the scheduler has already made.
# \`workflow_call\` is how the scheduler reaches this workflow; the manual
# \`workflow_dispatch\` entry point is unchanged and runs it in full.
on:
  workflow_call: {}
  workflow_dispatch: {}

permissions:
  contents: write
  pull-requests: write
  issues: write
  id-token: write

concurrency:
  group: gaia-ci-update-deps
  cancel-in-progress: false

env:
  GH_TOKEN: \${{ secrets.GITHUB_TOKEN }}
  CLAUDE_CODE_OAUTH_TOKEN: \${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
  ANTHROPIC_API_KEY: \${{ secrets.ANTHROPIC_API_KEY }}

jobs:
  run:
    runs-on: ubuntu-latest
    timeout-minutes: 60
    outputs:
      wave_b_matrix: \${{ steps.emit_updates.outputs.wave_b_matrix }}
      wave_b_count: \${{ steps.emit_updates.outputs.wave_b_count }}
      decision: \${{ steps.pre_run.outputs.decision }}
    steps:
      - name: Checkout
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1 # v7.0.1
        with:
          fetch-depth: 0

      - name: Pre-run skip - open gaia-ci PR or cron-decide
        id: pre_run
        run: |
          set -euo pipefail
          # Skip only if an open gaia-ci PR for THIS tool already exists.
          # Scope by branch prefix \`gaia-ci/update-deps/\` so a wiki PR does
          # not block the audit, etc. Each workflow branches under its own
          # tool_id prefix (see partials/auto-merge and the audit/update-deps
          # templates).
          existing_pr=$(gh pr list --state open --label gaia-ci \\
            --search 'author:app/github-actions' \\
            --json number,headRefName \\
            --jq '[.[] | select(.headRefName | startswith("gaia-ci/update-deps/"))] | .[0].number // empty')
          if [ -n "$existing_pr" ]; then
            echo "open gaia-ci PR #$existing_pr for update-deps; skipping"
            echo "decision=skip" >> "$GITHUB_OUTPUT"
            echo "reason=open_pr" >> "$GITHUB_OUTPUT"
            exit 0
          fi
          # Otherwise consult the smart-cron decision primitive.
          decision_json=$(.gaia/cli/gaia automation cron-decide update-deps --json)
          decision=$(printf '%s' "$decision_json" | jq -r '.decision')
          reason=$(printf '%s' "$decision_json" | jq -r '.reason')
          skip_log_line=$(printf '%s' "$decision_json" | jq -r '.skip_log_line // empty')
          if [ "$decision" = "skip" ]; then
            echo "$skip_log_line"
          fi
          echo "decision=$decision" >> "$GITHUB_OUTPUT"
          echo "reason=$reason" >> "$GITHUB_OUTPUT"

      # Setup sits after the skip decision so a tick that skips does not pay
      # for an install it never uses. All three steps carry the gate, not the
      # install alone: setup-node's \`cache: 'pnpm'\` post step saves the pnpm
      # store unconditionally, and saving a store no install created fails the
      # job. The gate reads \`!= 'skip'\` so this same setup also runs in a job
      # gated at the job level, which has no \`pre_run\` step of its own.
      - name: Setup pnpm
        if: steps.pre_run.outputs.decision != 'skip'
        uses: pnpm/action-setup@0977fd99725f1db4007ccb2928dbb4e90d06cc86 # v6.0.10
      - name: Setup Node
        if: steps.pre_run.outputs.decision != 'skip'
        uses: actions/setup-node@820762786026740c76f36085b0efc47a31fe5020 # v7.0.0
        with:
          node-version-file: '.node-version'
          cache: 'pnpm'
      - name: Install dependencies
        if: steps.pre_run.outputs.decision != 'skip'
        run: pnpm install --frozen-lockfile

      - name: Quality Gate
        if: steps.pre_run.outputs.decision == 'run'
        run: |
          set -euo pipefail
          pnpm typecheck
          pnpm lint


      - name: Emit update-deps plan
        id: emit_updates
        if: steps.pre_run.outputs.decision == 'run'
        # \`update-deps run --emit-updates\` enumerates outdated packages,
        # applies the ESLint 9.x cap and override audit, and writes a
        # JSON plan with two waves: wave_a (minor/patch, batched) and
        # wave_b (one entry per major-bump group).
        run: |
          set -euo pipefail
          updates_file="\${RUNNER_TEMP}/update-deps/updates.json"
          mkdir -p "$(dirname "$updates_file")"
          .gaia/cli/gaia update-deps run --emit-updates "$updates_file"
          echo "updates_file=$updates_file" >> "$GITHUB_OUTPUT"
          # Build the wave-B matrix payload: \`{"include": [{group: "..."}, ...]}\`.
          # The fan-out job's \`strategy.matrix\` consumes this verbatim.
          wave_b_groups=$(jq -c '[.wave_b[] | {group: .group}]' "$updates_file")
          wave_b_count=$(jq -r '.wave_b | length' "$updates_file")
          echo "wave_b_count=$wave_b_count" >> "$GITHUB_OUTPUT"
          echo "wave_b_matrix={\\"include\\":$wave_b_groups}" >> "$GITHUB_OUTPUT"
          # Wave-A package count drives the wave-A apply gate below.
          wave_a_count=$(jq -r '.wave_a | length' "$updates_file")
          echo "wave_a_count=$wave_a_count" >> "$GITHUB_OUTPUT"

      - name: Run /update-deps for wave A (minor/patch)
        id: wave_a
        if: |
          steps.pre_run.outputs.decision == 'run' &&
          steps.emit_updates.outputs.wave_a_count != '0'
        # Wave-A is the batched minor/patch path. The plan file scopes
        # the work; Claude executes the \`/update-deps\` skill against
        # only those entries, runs the quality gate, and leaves the
        # working tree dirty for the auto-merge partial to commit.
        env:
          UPDATES_FILE: \${{ steps.emit_updates.outputs.updates_file }}
        uses: anthropics/claude-code-action@63322d7b2bc79e7b621b89f41b53ceb8e5a5d314 # v1.0
        with:
          claude_code_oauth_token: \${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
          prompt: |
            Apply the \`/update-deps\` skill scoped to **wave A only**:
            the minor and patch bumps batched into a single install. The
            plan emitted by \`gaia update-deps run --emit-updates\` is at
            \`\${{ steps.emit_updates.outputs.updates_file }}\`; read its
            \`wave_a\` array to determine what to install.

            Procedure:

            1. Read \`\${{ steps.emit_updates.outputs.updates_file }}\`.
               Iterate \`wave_a\` entries. For each, build a \`pnpm add\`
               argument respecting \`is_pinned\`: pinned → exact version,
               otherwise → \`^<latest>\`.
            2. Run a single \`pnpm add ...\` with all entries combined.
            3. Run \`pnpm ls 2>&1\`. On peer-dep error, attempt one
               targeted \`overrides:\` fix in \`pnpm-workspace.yaml\`
               (e.g. \`parent>child\`), then \`pnpm install\` again. If
               still failing, revert the offending package(s) and
               proceed with the rest.
            4. Run the quality gate exactly: \`pnpm typecheck\`,
               \`pnpm lint\`, \`pnpm test --run\`, \`pnpm pw\`, \`pnpm build\`.
               If the gate fails, revert the entire wave-A batch and
               exit non-zero; the auto-merge partial will see no
               changes and skip the PR.

            Wave-B (per-group major bumps) is handled in a separate
            matrix job. Do NOT attempt to apply any wave-B group here;
            the plan file's \`wave_b\` array is informational only for
            this step.

            Do not push to remotes. The workflow's auto-merge partial
            commits the diff and opens the PR.
          claude_args: |
            --max-turns 60
            --allowedTools Bash,Edit,Write,Read
            --disallowedTools WebFetch,WebSearch

      # Auto-merge partial. Gated on \`enable_auto_merge\` so the
      # stale-branches workflow (which doesn't open a PR) emits no
      # merge invocation in its rendered YAML.

      - name: Open and auto-merge gaia-ci PR
        if: steps.pre_run.outputs.decision == 'run' && success()
        env:
          DEFAULT_BRANCH: \${{ github.event.repository.default_branch }}
        run: |
          set -euo pipefail
          branch="gaia-ci/update-deps/$(date -u +%Y%m%d-%H%M%S)"
          git checkout -b "$branch"
          if [ -z "$(git status --porcelain)" ]; then
            echo "no changes; nothing to PR"
            exit 0
          fi
          git config user.name 'github-actions[bot]'
          git config user.email 'github-actions[bot]@users.noreply.github.com'
          git add -A
          git commit -m "chore(update-deps): GAIA CI run"
          # Re-authenticate git before pushing. A claude-code-action step
          # earlier in this job runs in OIDC mode and rewrites the
          # checkout-persisted credential (http.<host>.extraheader) around a
          # short-lived, OIDC-derived GitHub App token that no longer
          # authorizes this push. Reset the extraheader to the workflow
          # GH_TOKEN (permissions: contents: write) so the push authenticates
          # deterministically regardless of what the action left behind.
          git config --local --unset-all http.https://github.com/.extraheader || true
          git config --local http.https://github.com/.extraheader \\
            "AUTHORIZATION: basic $(printf 'x-access-token:%s' "$GH_TOKEN" | base64 | tr -d '\\n')"
          git push origin "$branch"
          pr_url=$(gh pr create \\
            --title "chore(update-deps): GAIA CI run" \\
            --body "Generated by GAIA CI (GAIA CI - Update Deps)." \\
            --label gaia-ci \\
            --head "$branch" \\
            --base "$DEFAULT_BRANCH")
          pr_number=$(printf '%s' "$pr_url" | grep -oE '[0-9]+$')

          gh pr merge "$pr_number" --auto --squash




  wave_b:
    needs: run
    if: |
      needs.run.outputs.decision == 'run' &&
      needs.run.outputs.wave_b_count != '0' &&
      needs.run.outputs.wave_b_matrix != ''
    runs-on: ubuntu-latest
    timeout-minutes: 90
    permissions:
      contents: write
      pull-requests: write
      issues: write
      id-token: write
    strategy:
      fail-fast: false
      matrix: \${{ fromJson(needs.run.outputs.wave_b_matrix) }}
    steps:
      - name: Checkout
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1 # v7.0.1
        with:
          fetch-depth: 0

      # Setup sits after the skip decision so a tick that skips does not pay
      # for an install it never uses. All three steps carry the gate, not the
      # install alone: setup-node's \`cache: 'pnpm'\` post step saves the pnpm
      # store unconditionally, and saving a store no install created fails the
      # job. The gate reads \`!= 'skip'\` so this same setup also runs in a job
      # gated at the job level, which has no \`pre_run\` step of its own.
      - name: Setup pnpm
        if: steps.pre_run.outputs.decision != 'skip'
        uses: pnpm/action-setup@0977fd99725f1db4007ccb2928dbb4e90d06cc86 # v6.0.10
      - name: Setup Node
        if: steps.pre_run.outputs.decision != 'skip'
        uses: actions/setup-node@820762786026740c76f36085b0efc47a31fe5020 # v7.0.0
        with:
          node-version-file: '.node-version'
          cache: 'pnpm'
      - name: Install dependencies
        if: steps.pre_run.outputs.decision != 'skip'
        run: pnpm install --frozen-lockfile

      - name: Create per-group branch
        id: branch
        env:
          GROUP: \${{ matrix.group }}
          DEFAULT_BRANCH: \${{ github.event.repository.default_branch }}
        run: |
          set -euo pipefail
          branch="gaia-ci/update-deps/wave-b/\${GROUP}-$(date -u +%Y%m%d-%H%M%S)"
          git fetch origin "$DEFAULT_BRANCH"
          git checkout -B "$branch" "origin/$DEFAULT_BRANCH"
          git config user.name 'github-actions[bot]'
          git config user.email 'github-actions[bot]@users.noreply.github.com'
          echo "name=$branch" >> "$GITHUB_OUTPUT"

      - name: Run /update-deps for wave B group
        id: wave_b_apply
        # Per-group wave-B execution. Claude reads the migration guide,
        # runs \`pnpm add\` (or \`pnpm dlx storybook@latest upgrade\` for
        # the storybook group), applies code-affecting changes inside
        # \`app/\`, \`test/\`, and root config files, and runs the quality
        # gate. Web tools enabled so the migration guide is fetchable.
        env:
          GROUP: \${{ matrix.group }}
        uses: anthropics/claude-code-action@63322d7b2bc79e7b621b89f41b53ceb8e5a5d314 # v1.0
        with:
          claude_code_oauth_token: \${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
          prompt: |
            Run \`/update-deps --scope \${{ matrix.group }}\`.

            This is a wave-B per-group major-bump run. Apply the
            \`--scope\` flag as defined in the skill: skip Phase 0, 1,
            and 3; execute Phase 4/5 for the named group's members in
            root \`package.json\` only; run the quality gate.

            If unfixable after a reasonable attempt, revert the group
            and exit non-zero so the workflow opens no PR for this
            group.

            Do not push to remotes. The workflow commits and opens the
            per-group PR after this step.
          claude_args: |
            --max-turns 100
            --allowedTools Bash,Edit,Write,Read,WebFetch
            --disallowedTools WebSearch

      - name: Open wave-B group PR
        if: success()
        env:
          GROUP: \${{ matrix.group }}
          BRANCH: \${{ steps.branch.outputs.name }}
          DEFAULT_BRANCH: \${{ github.event.repository.default_branch }}
        run: |
          set -euo pipefail
          if [ -z "$(git status --porcelain)" ]; then
            echo "no changes for \${GROUP}; nothing to PR"
            exit 0
          fi
          git add -A
          git commit -m "chore(update-deps): wave-B major bump: \${GROUP}"
          # Re-authenticate git before pushing. The wave_b_apply
          # claude-code-action step above runs in OIDC mode and rewrites the
          # checkout-persisted credential (http.<host>.extraheader) around a
          # short-lived, OIDC-derived GitHub App token that no longer
          # authorizes this push. Reset the extraheader to the workflow
          # GH_TOKEN (permissions: contents: write) so the push authenticates
          # deterministically regardless of what the action left behind.
          git config --local --unset-all http.https://github.com/.extraheader || true
          git config --local http.https://github.com/.extraheader \\
            "AUTHORIZATION: basic $(printf 'x-access-token:%s' "$GH_TOKEN" | base64 | tr -d '\\n')"
          git push origin "$BRANCH"
          pr_url=$(gh pr create \\
            --title "chore(update-deps): wave-B major bump: \${GROUP}" \\
            --body "Per-group major-bump PR opened by GAIA CI (GAIA CI - Update Deps). Group: \\\`\${GROUP}\\\`. Review the migration carefully; wave-B PRs are not auto-merged." \\
            --label gaia-ci,needs-human \\
            --head "$BRANCH" \\
            --base "$DEFAULT_BRANCH")
          echo "wave-B PR opened: $pr_url"

"
`;

exports[`workflow template snapshots > gaia-ci-wiki.yml matches snapshot 1`] = `
"name: GAIA CI - Wiki

# Generated by \`gaia automation render-workflows\`. Do not edit by hand;
# changes here are overwritten on the next \`/setup-gaia --reconfigure\`.
# Source of truth: .gaia/automation.json + the workflow templates
# bundled with the gaia CLI.

# No \`schedule:\` here. \`gaia-ci.yml\` is the one scheduled entry point: it
# asks each due tool whether it has work and calls only the ones that answer
# \`run\`. GitHub bills every job a whole-minute minimum, so a tool waking its
# own cron paid that floor to reach a decision the scheduler has already made.
# \`workflow_call\` is how the scheduler reaches this workflow; the manual
# \`workflow_dispatch\` entry point is unchanged and runs it in full.
on:
  workflow_call: {}
  workflow_dispatch: {}

permissions:
  contents: write
  pull-requests: write
  issues: write
  id-token: write

concurrency:
  group: gaia-ci-wiki
  cancel-in-progress: false

env:
  GH_TOKEN: \${{ secrets.GITHUB_TOKEN }}
  CLAUDE_CODE_OAUTH_TOKEN: \${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
  ANTHROPIC_API_KEY: \${{ secrets.ANTHROPIC_API_KEY }}

jobs:
  run:
    runs-on: ubuntu-latest
    timeout-minutes: 60
    steps:
      - name: Checkout
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1 # v7.0.1
        with:
          fetch-depth: 0

      - name: Pre-run skip - open gaia-ci PR or cron-decide
        id: pre_run
        run: |
          set -euo pipefail
          # Skip only if an open gaia-ci PR for THIS tool already exists.
          # Scope by branch prefix \`gaia-ci/wiki/\` so a wiki PR does
          # not block the audit, etc. Each workflow branches under its own
          # tool_id prefix (see partials/auto-merge and the audit/update-deps
          # templates).
          existing_pr=$(gh pr list --state open --label gaia-ci \\
            --search 'author:app/github-actions' \\
            --json number,headRefName \\
            --jq '[.[] | select(.headRefName | startswith("gaia-ci/wiki/"))] | .[0].number // empty')
          if [ -n "$existing_pr" ]; then
            echo "open gaia-ci PR #$existing_pr for wiki; skipping"
            echo "decision=skip" >> "$GITHUB_OUTPUT"
            echo "reason=open_pr" >> "$GITHUB_OUTPUT"
            exit 0
          fi
          # Otherwise consult the smart-cron decision primitive.
          decision_json=$(.gaia/cli/gaia automation cron-decide wiki --json)
          decision=$(printf '%s' "$decision_json" | jq -r '.decision')
          reason=$(printf '%s' "$decision_json" | jq -r '.reason')
          skip_log_line=$(printf '%s' "$decision_json" | jq -r '.skip_log_line // empty')
          if [ "$decision" = "skip" ]; then
            echo "$skip_log_line"
          fi
          echo "decision=$decision" >> "$GITHUB_OUTPUT"
          echo "reason=$reason" >> "$GITHUB_OUTPUT"

      # Setup sits after the skip decision so a tick that skips does not pay
      # for an install it never uses. All three steps carry the gate, not the
      # install alone: setup-node's \`cache: 'pnpm'\` post step saves the pnpm
      # store unconditionally, and saving a store no install created fails the
      # job. The gate reads \`!= 'skip'\` so this same setup also runs in a job
      # gated at the job level, which has no \`pre_run\` step of its own.
      - name: Setup pnpm
        if: steps.pre_run.outputs.decision != 'skip'
        uses: pnpm/action-setup@0977fd99725f1db4007ccb2928dbb4e90d06cc86 # v6.0.10
      - name: Setup Node
        if: steps.pre_run.outputs.decision != 'skip'
        uses: actions/setup-node@820762786026740c76f36085b0efc47a31fe5020 # v7.0.0
        with:
          node-version-file: '.node-version'
          cache: 'pnpm'
      - name: Install dependencies
        if: steps.pre_run.outputs.decision != 'skip'
        run: pnpm install --frozen-lockfile

      - name: Quality Gate
        if: steps.pre_run.outputs.decision == 'run'
        run: |
          set -euo pipefail
          pnpm typecheck
          pnpm lint


      - name: Run gaia wiki chain
        id: wiki_chain
        if: steps.pre_run.outputs.decision == 'run'
        # Dispatches the wiki sync, consolidate, and lint workflows in a
        # single Claude session. \`/gaia-wiki sync\` itself commits via
        # \`gaia wiki sync land --branch-aware\`; subsequent commits from
        # consolidate's apply phase ride on top before the auto-merge
        # partial wraps the diff into a PR.
        uses: anthropics/claude-code-action@63322d7b2bc79e7b621b89f41b53ceb8e5a5d314 # v1.0
        with:
          claude_code_oauth_token: \${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
          prompt: |
            Run the GAIA wiki maintenance chain in this repository, in order:

            1. \`/gaia-wiki sync\`: evaluate every commit since the wiki's
               recorded \`last_evaluated_sha\`, edit pages as the playbook
               directs, advance state, and land via
               \`gaia wiki sync land --branch-aware\`. The CLI is the
               authority on landing semantics; do not hand-roll branch
               or push logic.
            2. \`/gaia-wiki consolidate\`: run the detection passes,
               apply (do not skip) every finding the playbook classifies
               as \`Apply (Recommended)\`. Skip findings that require
               editorial slug choice (near-collision) since this is a
               non-interactive run; flag them in the report file only.
            3. \`/gaia-wiki lint\`: run the upstream lint flow plus the
               GAIA-specific drift, dead-paths, and narrative-ref
               checks. Do not auto-fix lint findings; the report is
               sufficient.

            Stay strictly inside \`wiki/\` for body edits. Follow
            \`.claude/rules/wiki-style.md\` (present tense, no UAT/SPEC
            references in prose). Do not push to remotes; commits stay
            local; the workflow handles the PR.
          claude_args: |
            --max-turns 80
            --allowedTools Bash,Edit,Write,Read
            --disallowedTools WebFetch,WebSearch

      # Auto-merge partial. Gated on \`enable_auto_merge\` so the
      # stale-branches workflow (which doesn't open a PR) emits no
      # merge invocation in its rendered YAML.

      - name: Open and auto-merge gaia-ci PR
        if: steps.pre_run.outputs.decision == 'run' && success()
        env:
          DEFAULT_BRANCH: \${{ github.event.repository.default_branch }}
        run: |
          set -euo pipefail
          branch="gaia-ci/wiki/$(date -u +%Y%m%d-%H%M%S)"
          git checkout -b "$branch"
          if [ -z "$(git status --porcelain)" ]; then
            echo "no changes; nothing to PR"
            exit 0
          fi
          git config user.name 'github-actions[bot]'
          git config user.email 'github-actions[bot]@users.noreply.github.com'
          git add -A
          git commit -m "chore(wiki): GAIA CI run"
          # Re-authenticate git before pushing. A claude-code-action step
          # earlier in this job runs in OIDC mode and rewrites the
          # checkout-persisted credential (http.<host>.extraheader) around a
          # short-lived, OIDC-derived GitHub App token that no longer
          # authorizes this push. Reset the extraheader to the workflow
          # GH_TOKEN (permissions: contents: write) so the push authenticates
          # deterministically regardless of what the action left behind.
          git config --local --unset-all http.https://github.com/.extraheader || true
          git config --local http.https://github.com/.extraheader \\
            "AUTHORIZATION: basic $(printf 'x-access-token:%s' "$GH_TOKEN" | base64 | tr -d '\\n')"
          git push origin "$branch"
          pr_url=$(gh pr create \\
            --title "chore(wiki): GAIA CI run" \\
            --body "Generated by GAIA CI (GAIA CI - Wiki)." \\
            --label gaia-ci \\
            --head "$branch" \\
            --base "$DEFAULT_BRANCH")
          pr_number=$(printf '%s' "$pr_url" | grep -oE '[0-9]+$')

          # Wiki diff-size sanity check: if changed lines exceed 25% of
          # the wiki line count at the base ref, label \`needs-human\`
          # and skip auto-merge.
          if [ "$(.gaia/cli/gaia wiki diff-size --threshold-pct 25)" = "exceeded" ]; then
            gh pr edit "$pr_number" --add-label needs-human
            echo "diff-size > 25%; holding for human review"
            exit 0
          fi

          gh pr merge "$pr_number" --auto --squash


"
`;
